fix: refactor redis caching, bump cache versions and remove risky fault-tolerant wrapper to fix NPE